* Added support for "tile cutters"
* Added global properties for tilesets (properties set for all tiles)
* Added the ability to merge tile images when layers are merged
* Added more useful visual feedback for some brushes
* Added remembering of main window state as suggested by Dennis Spreen
* Added remembering of size and divider position to tile palette dialog
* Improved memory usage and speed in several areas
* Fixed new tileset dialog so that it is now possible to change the tile height
  to something other than the tile height used by the map
* Fixed a bug when exporting a tileset with an external image
* Fixed two cases of hanging when using the fill tool
* Fixed tile palette bug of not accounting for gaps in tile ids (old bug)
* Fixed tile palette bug of displaying multiple tilesets over eachother
* Fixed bug of adding a new tile even if cancelling out of new tile dialog
* Fixed NullPointerException when saving a map with no extension
* Fixed the zooming so that it keeps the center in place
* Fixed exiting even when a request to save the changes failed
* Fixed layer merging so that undo/redo of operation is functional
* Fixed resetting of selected tileset in tile palette on layer changes
* Rewrote configuration based on the Preferences class, no more tiled.conf
* Cleaned up TileSet (removed checksumming and rotation/orienation code)
* Removed experimental hexagonal mapview from new map dialog

0.5.1 - June 15th, 2005

* Added a checkerboard background to tileset palette
* Added support for layer locking (not editable when locked)
* Added support for tmx.gz map files
* Added selection addition and substraction via Shift and Ctrl respectively
* Improved the drawing speed thanks to some thorough testing and suggestions
  (Jerome Blouin)
* Improved transformation so that it respects selections
* Fixed the "Save As Image" feature to use current zoom level
* Fixed drawing on invisible layers
* Fixed selection rectangle to include one more tile