@@ -5,15 +5,12 @@
  *  it under the terms of the GNU General Public License as published by
  *  the Free Software Foundation; either version 2 of the License, or
  *  (at your option) any later version.
- * 
+ *
  *  Adam Turk <aturk@biggeruniverse.com>
  *  Bjorn Lindeijer <b.lindeijer@xs4all.nl>
  */
 
 package tiled.io;
-
-import java.util.Stack;
-
 
 /**
  * This is the interface for all Tiled I/O plugins, whether they load, save, or
@@ -25,42 +22,42 @@ public interface PluggableMapIO
     /**
      * Lists supported file extensions. This function is used by the editor to
      * find the plugin to use for a specific file extension.
-     * 
+     *
      * @return a comma delimited string of supported file extensions
      * @throws Exception
      */
     public String getFilter() throws Exception;
 
     /**
-     * Returns a short description of the plugin, or the plugin name. This 
+     * Returns a short description of the plugin, or the plugin name. This
      * string is displayed in the list of loaded plugins under the Help menu in
      * Tiled.
-     * 
-     * @return a short name or description  
+     *
+     * @return a short name or description
      */
     public String getName();
 
     /**
-     * Returns a long description (no limit) that details the plugin's 
+     * Returns a long description (no limit) that details the plugin's
      * capabilities, author, contact info, etc.
-     * 
+     *
      * @return a long description of the plugin
      */
     public String getDescription();
-    
+
     /**
      * Returns the base Java package string for the plugin
-     * 
+     *
      * @return String the base package of the plugin
      */
     public String getPluginPackage();
-    
+
     /**
      * The PluginLogger object passed by the editor when the plugin is called to load
      * or save a map can be used by the plugin to notify the user of any
      * problems or messages.
-     * 
-     * @param logger 
+     *
+     * @param logger
      */
     public void setLogger(PluginLogger logger);
 }
